# django-ses

./: .gitignore  .pre-commit-config.yaml  .travis.yml  AUTHORS  CHANGES.md  MANIFEST.in  Makefile  README.md  README.rst  django-ses.spec  docker-compose.yml  pyproject.toml  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
.github/workflow/: test.yml  unittest.yml
.github/workflows/: ci.yml  pypi.yml  test.yml
CVE/: 001-cert-url-signature-verification.md
django_ses/: __init__.py  admin.py  apps.py  conf.py  deprecation.py  exceptions.py  handlers.py  inbound.py  models.py  settings.py  signals.py  urls.py  utils.py  views.py
django_ses/management/commands/: blacklist.py  get_ses_statistics.py  ses_email_address.py
django_ses/migrations/: 0001_initial.py  0002_blacklistedemail.py
django_ses/templates/django_ses/: send_stats.html
django_ses/tests/: __init__.py  backend.py  commands.py  configuration.py  handlers.py  stats.py  test_backend.py  test_commands.py  test_ses_backend.py  test_settings.py  test_urls.py  test_verifier.py  test_views.py  views.py
example/: MANIFEST.in  local_settings.template.py  manage.py  middleware.py  settings.py  urls.py  views.py
example/templates/: base.html  index.html  send-email.html
tests/: email_content.base64  helper.py  mocks.py  test_backend.py  test_backend_localstack.py  test_commands.py  test_inbound.py  test_settings.py  test_signals.py  test_stats.py  test_urls.py  test_verifier.py  test_views.py  utils.py
